# service-auth

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  start.py
configs/: __init__.py  database.py  default.py  jwt.py
database/: __init__.py  engine.py  models.py  scripts.py
migrations/: env.py
migrations/versions/: 55786619813e_zero_migration.py  fe3e1a1bdcea_model_fixes.py
routers/: __init__.py  auth.py  health.py  users.py
schemas/: auth.py  examples.py  users.py
utils/: auth.py
